--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -63,6 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_marginRight="@dimen/eight_dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_height="wrap_content">
                 <EditText
                     android:id="@+id/first_name"
@@ -77,6 +78,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="0dp"
                 android:layout_weight="2"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_height="match_parent">
                 <EditText
                     android:id="@+id/last_name"
@@ -92,6 +94,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_margin="@dimen/eight_dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/email_address"
@@ -107,6 +110,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_margin="@dimen/eight_dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/project_link"
