--- a/app/src/main/res/layout-v28/activity_submit.xml
+++ b/app/src/main/res/layout-v28/activity_submit.xml
@@ -21,6 +21,8 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <Button
+                android:id="@+id/back_pressed"
+                android:onClick="backButtonPressed"
                 android:layout_width="30dp"
                 android:layout_height="20dp"
                 android:layout_margin="@dimen/eight_dp"
