--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -26,7 +26,7 @@
                 android:layout_width="30dp"
                 android:layout_height="20dp"
                 android:layout_margin="@dimen/eight_dp"
-                android:background="@drawable/button_back" />
+                android:background="@drawable/arrow_back" />
 
             <ImageView
                 android:layout_width="match_parent"
