--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#484848</color>
     <color name="orange">#FF9800</color>
+
+
+    <color name="user_input_color">#FFEB3B</color>
+    <color name="unfocused_color">#8BC34A</color>
+    <color name="white">#FFFFFF</color>
+    <color name="blue">#3F51B5</color>
+    <color name="green">#4CAF50</color>
 </resources>
