--- a/app/src/main/res/layout/hours_item_lists.xml
+++ b/app/src/main/res/layout/hours_item_lists.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="kapadokia.nyandoro.gads.util.StringUtil"/>
@@ -34,15 +35,19 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginTop="@dimen/sixteen_dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/languages"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/sixteen_sp"
+                    android:textColor="@android:color/darker_gray"
+                    android:textStyle="bold"
+                    tools:text="Username"
+                    android:textSize="@dimen/twenty_sp"
                     android:text="@{HoursCount.name}"/>
 
                 <TextView
