--- a/app/src/main/res/layout/skill_item_list.xml
+++ b/app/src/main/res/layout/skill_item_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="kapadokia.nyandoro.gads.util.StringUtil"/>
@@ -34,13 +35,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginTop="@dimen/sixteen_dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/languages"
+                    android:textColor="@android:color/darker_gray"
+                    android:textStyle="bold"
+                    tools:text="Username"
+                    android:textSize="@dimen/twenty_sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/sixteen_sp"
                     android:text="@{skillIq.name}"/>
 
                 <TextView
