--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -71,10 +71,8 @@
                 <EditText
                     android:id="@+id/first_name"
                     android:layout_width="match_parent"
-                    android:background="@color/colorAccent"
+                    android:background="@color/white"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
                     android:padding="@dimen/eight_sp"
                     android:hint="@string/first_name"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -86,10 +84,8 @@
                 <EditText
                     android:id="@+id/last_name"
                     android:layout_width="match_parent"
-                    android:background="@color/colorAccent"
+                    android:background="@color/white"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@android:color/white"
                     android:padding="@dimen/eight_sp"
                     android:hint="@string/last_name"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -103,9 +99,7 @@
                 android:id="@+id/email_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"
+                android:background="@color/white"
                 android:padding="@dimen/eight_sp"
                 android:hint="@string/email_address"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -119,9 +113,7 @@
                 android:id="@+id/project_link"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"
+                android:background="@color/white"
                 android:padding="@dimen/eight_sp"
                 android:hint="@string/project_on_github_link"/>
         </com.google.android.material.textfield.TextInputLayout>
